--- a/app/src/main/res/layout/fragment_locations_on_map.xml
+++ b/app/src/main/res/layout/fragment_locations_on_map.xml
@@ -21,23 +21,13 @@
             android:id="@+id/place_input_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="3dp"
             tools:layout_height="50dp"/>
 
         <TextView
             android:id="@+id/too_far_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="64dp"
-            android:layout_marginRight="64dp"
+            style="@style/InfoMessage"
             android:layout_marginTop="@dimen/margin_small"
-            android:background="@drawable/background_map_message"
-            android:gravity="center"
-            android:padding="8dp"
             android:text="@string/message_too_far"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="@color/colorText"
             android:visibility="gone"
             tools:visibility="visible"/>
     </LinearLayout>
