--- a/app/src/main/res/layout-large/activity_address_list.xml
+++ b/app/src/main/res/layout-large/activity_address_list.xml
@@ -7,8 +7,9 @@
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
-                 android:layout_width="match_parent"
+                 android:layout_width="0dp"
                  android:layout_height="match_parent"
+                 android:layout_weight="4"
                  android:animateLayoutChanges="true">
 
         <android.support.v7.widget.RecyclerView
