--- a/app/src/main/res/layout/listitem_address.xml
+++ b/app/src/main/res/layout/listitem_address.xml
@@ -5,6 +5,7 @@
               android:layout_height="wrap_content"
               android:animateLayoutChanges="true"
               android:clickable="true"
+              android:background="?android:attr/selectableItemBackground"
               android:orientation="horizontal">
 
     <TextView
